@@ -566,7 +566,9 @@ issrcfile(char *path)
 		  && ((s[0] == 't' && s[1] == 'c' && s[2] == 'c' )
 		      /* C++ source: */
 		      || (s[0] == 'c' && s[1] == 'p' && s[2] == 'p' )
-		      || (s[0] == 'c' && s[1] == 'x' && s[2] == 'x' ))
+		      || (s[0] == 'c' && s[1] == 'x' && s[2] == 'x' )
+		      || (s[0] == 'h' && s[1] == 'p' && s[2] == 'p' )
+		      || (s[0] == 'h' && s[1] == 'x' && s[2] == 'x' ))
 		  ) {
 		looks_like_source = YES;
 	}
