@@ -376,6 +376,9 @@ cscope: Could not create private temp dir %s\n",
     /* cleanup on the hangup signal */
     signal(SIGHUP, myexit);
 
+    /* ditto the TERM signal */
+    signal(SIGTERM, myexit);
+
     /* if the database path is relative and it can't be created */
     if (reffile[0] != '/' && access(".", WRITE) != 0) {
 
